--- a/0725.html
+++ b/0725.html
@@ -216,20 +216,7 @@
 <p>&nbsp;</p>
 
 <strong> 4. 청첩장 </strong> 
-<table cellspacing="0" style="border-collapse:collapse; width:63px">
-	<tbody>
-		<tr>
-			<td style="border-bottom:none; border-left:none; border-right:none; border-top:none; height:29px; vertical-align:middle; white-space:nowrap; width:63px"><a href="https://github.com/igohomenow/manila/blob/main/Invitation-2.pdf">https://github.com/igohomenow/manila/blob/main/Invitation-2.pdf</a></td>
-		</tr>
-		<tr>
-			<td style="border-bottom:none; border-left:none; border-right:none; border-top:none; height:29px; vertical-align:middle; white-space:nowrap"><a href="https://github.com/igohomenow/manila/blob/main/Invitation-1.png">https://github.com/igohomenow/manila/blob/main/Invitation-1.png&nbsp;</a></td>
-		</tr>
-		<tr>
-			<td style="border-bottom:none; border-left:none; border-right:none; border-top:none; height:23px; vertical-align:middle; white-space:nowrap"><a href="https://github.com/igohomenow/manila/blob/main/Invitation-2.png">https://github.com/igohomenow/manila/blob/main/Invitation-2.png&nbsp;</a></td>
-		</tr>
-	</tbody>
-</table>
-
+<object data="Invitation-2.pdf" height="100%" width="100%"></object>
 
 <p>&nbsp;</p>
 
