--- a/0725.html
+++ b/0725.html
@@ -215,8 +215,10 @@
 
 <p>&nbsp;</p>
 
-<strong> 4. 청첩장 15 </strong> 
-<object data="Invitation-2.pdf" height="1500%" width="100%"></object>
+<strong> 4. 청첩장 </strong> 
+<a href="https://igohomenow.github.io/manila/Invitation.html">https://igohomenow.github.io/manila/Invitation.html</a>
+
+
 
 <p>&nbsp;</p>
 
