--- a/Invitation.html
+++ b/Invitation.html
@@ -5,6 +5,7 @@
 <title>Invitation</title>
 </head>
 <body>
+    Ver-1
     <!-- src="./viewer.html?file=pdf파일경로" -->
 
     <object data="https://igohomenow.github.io/manila/Invitation.pdf" type="application/pdf" width="100%" height="600">
@@ -15,5 +16,5 @@
 </html>
 
 
-    <iframe width="100%" height="600" src="./Invitation.html?file=Invitation.pdf"></iframe>
+###    <iframe width="100%" height="600" src="./Invitation.html?file=Invitation.pdf"></iframe>
     
