--- a/0725.html
+++ b/0725.html
@@ -216,7 +216,10 @@
 <p>&nbsp;</p>
 
 <strong> 4. 청첩장 </strong> 
+<br>	  
 <a href="https://igohomenow.github.io/manila/Invitation.html">https://igohomenow.github.io/manila/Invitation.html</a>
+<br>	  
+<iframe width="100%" height="600" src="./Invitation.html?file=Invitation.pdf"></iframe>	  
 
 
 
