--- a/0725.html
+++ b/0725.html
@@ -219,7 +219,7 @@
 <br>	  
 <a href="https://igohomenow.github.io/manila/Invitation.html">https://igohomenow.github.io/manila/Invitation.html</a>
 <br>	  
-<iframe width="100%" height="600" src="./Invitation.html?file=Invitation.pdf"></iframe>	  
+<iframe width="100%" height="600" src="./Invitation.pdf"></iframe>
 
 
 
