--- a/0725.html
+++ b/0725.html
@@ -215,7 +215,7 @@
 
 <p>&nbsp;</p>
 
-<strong> 4. 청첩장 </strong> 
+<strong> 4. 청첩장 . </strong> 
 <br>	  
 <a href="https://igohomenow.github.io/manila/Invitation.html">https://igohomenow.github.io/manila/Invitation.html</a>
 <br>	  
