--- a/Invitation.html
+++ b/Invitation.html
@@ -5,7 +5,7 @@
 <title>Invitation</title>
 </head>
 <body>
-ver-4 <br>
+ver-4. <br>
 <img src="Invitation.png" width="250" height="250">
 </body>
 </html>
