--- a/0725.html
+++ b/0725.html
@@ -215,12 +215,14 @@
 
 <p>&nbsp;</p>
 
-<strong> 4. 청첩장 . </strong> 
+<strong> 4. 청첩장 .. </strong> 
 <br>	  
 <a href="https://igohomenow.github.io/manila/Invitation.html">https://igohomenow.github.io/manila/Invitation.html</a>
 <br>	  
-<iframe width="100%" height="600" src="./Invitation.pdf"></iframe>
-
+<img src="Invitation-1.png" width="250" height="250">
+<img src="Invitation-2.png" width="250" height="250">	  
+<img src="Invitation-3.png" width="250" height="250">
+<img src="Invitation-4.png" width="250" height="250">	  
 
 
 <p>&nbsp;</p>
