--- a/0725.html
+++ b/0725.html
@@ -215,14 +215,17 @@
 
 <p>&nbsp;</p>
 
-<strong> 4. 청첩장 .. </strong> 
+<strong> 4. 청첩장 4 </strong> 
 <br>	  
 <a href="https://igohomenow.github.io/manila/Invitation.html">https://igohomenow.github.io/manila/Invitation.html</a>
 <br>	  
-<img src="Invitation-1.png" width="250" height="250">
-<img src="Invitation-2.png" width="250" height="250">	  
-<img src="Invitation-3.png" width="250" height="250">
-<img src="Invitation-4.png" width="250" height="250">	  
+<img src="Invitation-1.png" width="500" height="500">
+<img src="Invitation-2.png" width="500" height="300">	  
+<img src="Invitation-3.png" width="500" height="250">
+<img src="Invitation-4.png" width="1000" height="500">	  
+<img src="Invitation-5.png" width="1000" height="750">
+<img src="Invitation-6.png" width="1000" height="1000">	  
+<img src="Invitation-7.png" width="250" height="250">
 
 
 <p>&nbsp;</p>
