--- a/0725.html
+++ b/0725.html
@@ -186,7 +186,7 @@
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:47px; text-align:center; vertical-align:middle; white-space:nowrap">4</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:none; border-top:none; text-align:center; vertical-align:middle; white-space:nowrap">저녁식사(26일)</td>
-			<td colspan="2" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:753px">Lola Nene 개인저택&nbsp; :<br />
+			<td colspan="2" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:753px"> 집&nbsp; :<br />
 			2 Banyan Street, North Forbes Park, Makati</td>
 		</tr>
 	</tbody>
