--- a/Invitation.html
+++ b/Invitation.html
@@ -7,7 +7,7 @@
 <body>
 ver -4 <br>
 
-<iframe width="100%" height="600" src="./Invitation.pdf"></iframe>
+<iframe width="100%" height="100%" src="./Invitation.pdf"></iframe>
 
 </body>
 </html>
