--- a/Invitation.html
+++ b/Invitation.html
@@ -5,9 +5,9 @@
 <title>Invitation</title>
 </head>
 <body>
-ver -5 <br>
+ver -6 <br>
 
-<iframe width="100%" height="100%" src="./Invitation.pdf"></iframe>
+<iframe width="50%" height="550" src="./Invitation.pdf"></iframe>
 
 </body>
 </html>
