--- a/Invitation.html
+++ b/Invitation.html
@@ -6,8 +6,17 @@
 </head>
 <body>
 ver -6 <br>
-
+    
 <iframe width="50%" height="550" src="./Invitation.pdf"></iframe>
+....................................
+<embed type="application/pdf" src="./Invitation.pdf" width="640" height="480">
+....................................
+  <object type="application/pdf"
+      data="./Invitation.pdf"
+      width="250"
+      height="200">
+  </object>
+    
 
 </body>
 </html>
