--- a/Invitation.html
+++ b/Invitation.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 ver -6 <br>
+<br>	  
+<a href="https://igohomenow.github.io/manila/Invitation.pdf">https://igohomenow.github.io/manila/Invitation.pdf</a>
+<a href="./Invitation.pdf"> ./Invitation.pdf</a>    
     
+<br>	      
 <iframe width="50%" height="550" src="./Invitation.pdf"></iframe>
 ....................................
 <embed type="application/pdf" src="./Invitation.pdf" width="640" height="480">
