--- a/0725.html
+++ b/0725.html
@@ -216,8 +216,8 @@
 <p>&nbsp;</p>
 
 <strong> 4. 청첩장 </strong> 
-<br>	  
-<a href="https://igohomenow.github.io/manila/Invitation.html">https://igohomenow.github.io/manila/Invitation.html</a>
+<br>
+<a href="./Invitation.pdf"> Invitation.pdf </a> 	  
 <br>	  
 <img src="Invitation-1.png" width="450" height="600">
 <img src="Invitation-2.png" width="450" height="600">	  
