--- a/0725.html
+++ b/0725.html
@@ -7,8 +7,9 @@
   </head>
   <body>
 
-<strong> 마닐라 스케줄  </strong> <br><br>
- 
+<p style="font-size:200%">  
+<strong> 마닐라 스케줄  </strong> </p>  <br><br>
+
 <strong> 1. 일정표  </strong> <br>
 <table cellspacing="0" style="border-collapse:collapse; width:1060px">
 	<tbody>
@@ -216,9 +217,9 @@
 <p>&nbsp;</p>
 
 <strong> 4. 청첩장 </strong> 
-<br>
-<a href="./Invitation.pdf"> Invitation.pdf </a> 	  
+<a href="./Invitation.pdf"> : Invitation.pdf </a> 	  
 <br>	  
+	  
 <img src="Invitation-1.png" width="450" height="600">
 <img src="Invitation-2.png" width="450" height="600">	  
 <img src="Invitation-3.png" width="450" height="600">
