--- a/0725.html
+++ b/0725.html
@@ -120,7 +120,7 @@
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:23px; vertical-align:middle; white-space:nowrap">18:00</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><strong>저녁식사</strong></td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap">사돈댁 초대 (오스틴 할아버지의 여동생 집)</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap">사돈댁 초대 (신랑의 고모할머니 댁)</td>
 		</tr>
 		<tr>
 			<td style="border-bottom:none; border-left:none; border-right:1px solid black; border-top:none; height:24px; vertical-align:middle; white-space:nowrap">(21:00)</td>
@@ -218,7 +218,7 @@
 
 <strong> 4. 청첩장 </strong> 
 <a href="./Invitation.pdf"> : Invitation.pdf </a> 	  
-<br>	  
+<br><br> 
 	  
 <img src="Invitation-1.png" width="450" height="600">
 <img src="Invitation-2.png" width="450" height="600">	  
