--- a/0725.html
+++ b/0725.html
@@ -8,7 +8,7 @@
   <body>
 
 <p style="font-size:200%">  
-<strong> 마닐라 스케줄  </strong> </p>  <br><br>
+<strong> 마닐라 스케줄  </strong> </p>  <br>
 
 <strong> 1. 일정표  </strong> <br>
 <table cellspacing="0" style="border-collapse:collapse; width:1060px">
