--- a/0725.html
+++ b/0725.html
@@ -235,7 +235,7 @@
 <table cellspacing="0" style="border-collapse:collapse; width:663px">
 	<tbody>
 		<tr>
-			<td rowspan="4" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; height:154px; text-align:center; vertical-align:middle; white-space:nowrap; width:63px">&nbsp;(영상)</td>
+			<td rowspan="4" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; height:154px; text-align:center; vertical-align:middle; white-space:nowrap; width:63px">&nbsp; 영상 </td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; text-align:center; vertical-align:middle; white-space:nowrap; width:162px">필리핀 입국 절차 -1</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; vertical-align:middle; white-space:nowrap; width:438px"><a href="https://www.youtube.com/watch?v=eWNeNzdmSXE">https://www.youtube.com/watch?v=eWNeNzdmSXE</a></td>
 		</tr>
@@ -253,8 +253,8 @@
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.youtube.com/watch?v=SG1BX02mgwU">https://www.youtube.com/watch?v=SG1BX02mgwU</a></td>
 		</tr>
 		<tr>
-			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:32px; text-align:center; vertical-align:middle; white-space:nowrap">&nbsp;(자료)</td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; text-align:center; vertical-align:middle; white-space:nowrap">필리핀 여행 정보 :</td>
+			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:32px; text-align:center; vertical-align:middle; white-space:nowrap">&nbsp; 자료 </td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; text-align:center; vertical-align:middle; white-space:nowrap">필리핀 여행 정보 </td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.itsmorefuninthephilippines.co.kr/travel-a-to-z">https://www.itsmorefuninthephilippines.co.kr/travel-a-to-z</a></td>
 		</tr>
 	</tbody>
