--- a/0725.html
+++ b/0725.html
@@ -8,7 +8,7 @@
   <body>
 
 <p style="font-size:200%">  
-<strong> 마닐라 스케줄  </strong> </p>  <br>
+<strong> 마닐라 스케줄  </strong> </p>  <br><br>
 
 <strong> 1. 일정표  </strong> <br>
 <table cellspacing="0" style="border-collapse:collapse; width:1060px">
@@ -120,7 +120,7 @@
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:23px; vertical-align:middle; white-space:nowrap">18:00</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><strong>저녁식사</strong></td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap">사돈댁 초대 (신랑의 고모할머니 댁)</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"> 사돈댁 초대 (Blackbird Makati) </td>
 		</tr>
 		<tr>
 			<td style="border-bottom:none; border-left:none; border-right:1px solid black; border-top:none; height:24px; vertical-align:middle; white-space:nowrap">(21:00)</td>
@@ -187,8 +187,11 @@
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:47px; text-align:center; vertical-align:middle; white-space:nowrap">4</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:none; border-top:none; text-align:center; vertical-align:middle; white-space:nowrap">저녁식사(26일)</td>
-			<td colspan="2" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:753px"> 집&nbsp; :<br />
-			2 Banyan Street, North Forbes Park, Makati</td>
+			<td colspan="2" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:753px"> Blackbird Makati :&nbsp; :<br />
+			6752 1229 Makati Ave, Makati, 1229 Metro Manila </td>			
+			 
+
+
 		</tr>
 	</tbody>
 </table>
@@ -235,7 +238,7 @@
 <table cellspacing="0" style="border-collapse:collapse; width:663px">
 	<tbody>
 		<tr>
-			<td rowspan="4" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; height:154px; text-align:center; vertical-align:middle; white-space:nowrap; width:63px">&nbsp; 영상 </td>
+			<td rowspan="4" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; height:154px; text-align:center; vertical-align:middle; white-space:nowrap; width:63px">&nbsp;(영상)</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; text-align:center; vertical-align:middle; white-space:nowrap; width:162px">필리핀 입국 절차 -1</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; vertical-align:middle; white-space:nowrap; width:438px"><a href="https://www.youtube.com/watch?v=eWNeNzdmSXE">https://www.youtube.com/watch?v=eWNeNzdmSXE</a></td>
 		</tr>
@@ -253,8 +256,8 @@
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.youtube.com/watch?v=SG1BX02mgwU">https://www.youtube.com/watch?v=SG1BX02mgwU</a></td>
 		</tr>
 		<tr>
-			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:32px; text-align:center; vertical-align:middle; white-space:nowrap">&nbsp; 자료 </td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; text-align:center; vertical-align:middle; white-space:nowrap">필리핀 여행 정보 </td>
+			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:32px; text-align:center; vertical-align:middle; white-space:nowrap">&nbsp;(자료)</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; text-align:center; vertical-align:middle; white-space:nowrap">필리핀 여행 정보 :</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.itsmorefuninthephilippines.co.kr/travel-a-to-z">https://www.itsmorefuninthephilippines.co.kr/travel-a-to-z</a></td>
 		</tr>
 	</tbody>
