--- a/0725.html
+++ b/0725.html
@@ -187,7 +187,7 @@
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:47px; text-align:center; vertical-align:middle; white-space:nowrap">4</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:none; border-top:none; text-align:center; vertical-align:middle; white-space:nowrap">저녁식사(26일)</td>
-			<td colspan="2" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:753px"> Blackbird Makati :&nbsp; :<br />
+			<td colspan="2" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:753px"> <strong> Blackbird Makati : </strong><br />
 			6752 1229 Makati Ave, Makati, 1229 Metro Manila </td>			
 			 
 
