--- a/0725.html
+++ b/0725.html
@@ -55,7 +55,7 @@
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:23px; vertical-align:middle; white-space:nowrap">17:30</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><strong>저녁식사 장소로 출발 (단체버스로 이동)</strong></td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap">사돈댁 초대 ( East Ocean Palace Restaurant)</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap">사돈댁 초대 ( Restaurant - East Ocean Palace)</td>
 		</tr>
 		<tr>
 			<td style="border-bottom:none; border-left:none; border-right:1px solid black; border-top:none; height:24px; vertical-align:middle; white-space:nowrap">(21:00)</td>
@@ -120,7 +120,7 @@
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:23px; vertical-align:middle; white-space:nowrap">18:00</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><strong>저녁식사</strong></td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"> 사돈댁 초대 (Blackbird Makati) </td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"> 사돈댁 초대 (Restaurant - Blackbird Makati) </td>
 		</tr>
 		<tr>
 			<td style="border-bottom:none; border-left:none; border-right:1px solid black; border-top:none; height:24px; vertical-align:middle; white-space:nowrap">(21:00)</td>
@@ -181,13 +181,13 @@
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:46px; text-align:center; vertical-align:middle; white-space:nowrap">3</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:none; border-top:none; text-align:center; vertical-align:middle; white-space:nowrap">저녁식사(24일)</td>
-			<td colspan="2" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:753px"><strong>East Ocean Palace Restaurant :</strong><br />
+			<td colspan="2" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:753px"><strong>Restaurant - East Ocean Palace :</strong><br />
 			Lot 37 Block 5 Aseana Business Park, Para&ntilde;aque, Metro Manila&nbsp;</td>
 		</tr>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:47px; text-align:center; vertical-align:middle; white-space:nowrap">4</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:none; border-top:none; text-align:center; vertical-align:middle; white-space:nowrap">저녁식사(26일)</td>
-			<td colspan="2" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:753px"> <strong> Blackbird Makati : </strong><br />
+			<td colspan="2" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:753px"> <strong> Restaurant - Blackbird Makati : </strong><br />
 			6752 1229 Makati Ave, Makati, 1229 Metro Manila </td>			
 			 
 
