--- a/0725.html
+++ b/0725.html
@@ -108,9 +108,8 @@
 		</tr>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:46px; vertical-align:middle; white-space:nowrap">(08:00 ~18:00)</td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:normal; width:438px">1일 투어 (팍상한 폭포, Pagsanjan Falls)<br />
-			: 작은 보트에 탑승하여 폭포 안으로 이동하므로 옷이 젖을 수 있음</td>
-			<td style="border-bottom:none; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:normal; width:315px">갈아입을 옷 준비 (개별 화장), 샌들, 수건</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:normal; width:438px">  ** </td>
+			<td style="border-bottom:none; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:normal; width:315px"> ** </td>
 		</tr>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:23px; vertical-align:middle; white-space:nowrap">　</td>
