--- a/0725.html
+++ b/0725.html
@@ -234,19 +234,28 @@
 <p>&nbsp;</p>
 
 <strong> 5. 참조 링크 </strong> 
-<table cellspacing="0" style="border-collapse:collapse; width:663px">
+<table cellspacing="0" style="border-collapse:collapse; width:704px">
 	<tbody>
 		<tr>
-			<td rowspan="4" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; height:154px; text-align:center; vertical-align:middle; white-space:nowrap; width:63px">&nbsp;(영상)</td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; text-align:center; vertical-align:middle; white-space:nowrap; width:162px">필리핀 입국 절차 -1</td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; vertical-align:middle; white-space:nowrap; width:438px"><a href="https://www.youtube.com/watch?v=eWNeNzdmSXE">https://www.youtube.com/watch?v=eWNeNzdmSXE</a></td>
+			<td rowspan="2" style="border-bottom:.7px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; height:44px; text-align:center; vertical-align:middle; white-space:nowrap; width:63px">문서</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; text-align:center; vertical-align:middle; white-space:nowrap; width:162px">필리핀 입국 안내 :</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; vertical-align:middle; white-space:nowrap; width:478px"><a href="https://www.itsmorefuninthephilippines.co.kr/travel/entry-guidelines">https://www.itsmorefuninthephilippines.co.kr/travel/entry-guidelines</a></td>
 		</tr>
 		<tr>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:32px; text-align:center; vertical-align:middle; white-space:nowrap">필리핀 입국 절차-2</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:22px; text-align:center; vertical-align:middle; white-space:nowrap">필리핀 여행 정보 :</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.itsmorefuninthephilippines.co.kr/travel-a-to-z">https://www.itsmorefuninthephilippines.co.kr/travel-a-to-z</a></td>
+		</tr>
+		<tr>
+			<td rowspan="4" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:153px; text-align:center; vertical-align:middle; white-space:nowrap">영상</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; text-align:center; vertical-align:middle; white-space:nowrap">필리핀 입국 과정 -1</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.youtube.com/watch?v=eWNeNzdmSXE">https://www.youtube.com/watch?v=eWNeNzdmSXE</a></td>
+		</tr>
+		<tr>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:32px; text-align:center; vertical-align:middle; white-space:nowrap">필리핀 입국 과정 -2</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.youtube.com/watch?v=SblD2y6gR4w">https://www.youtube.com/watch?v=SblD2y6gR4w</a></td>
 		</tr>
 		<tr>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:58px; text-align:center; vertical-align:middle; white-space:normal; width:162px">One Health Pass<br />
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:57px; text-align:center; vertical-align:middle; white-space:normal; width:162px">One Health Pass<br />
 			(eArrival Card) 등록&nbsp;</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.youtube.com/watch?v=1MIUE-TdJiE">https://www.youtube.com/watch?v=1MIUE-TdJiE</a></td>
 		</tr>
@@ -254,13 +263,10 @@
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:32px; text-align:center; vertical-align:middle; white-space:nowrap">백신접종 증명서 발급</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.youtube.com/watch?v=SG1BX02mgwU">https://www.youtube.com/watch?v=SG1BX02mgwU</a></td>
 		</tr>
-		<tr>
-			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:32px; text-align:center; vertical-align:middle; white-space:nowrap">&nbsp;(자료)</td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; text-align:center; vertical-align:middle; white-space:nowrap">필리핀 여행 정보 :</td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.itsmorefuninthephilippines.co.kr/travel-a-to-z">https://www.itsmorefuninthephilippines.co.kr/travel-a-to-z</a></td>
-		</tr>
 	</tbody>
 </table>
+
+
 
 
 
