--- a/0725.html
+++ b/0725.html
@@ -195,14 +195,14 @@
 		</tr>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:46px; text-align:center; vertical-align:middle; white-space:nowrap">3</td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:none; border-top:none; text-align:center; vertical-align:middle; white-space:nowrap">Restaurent (24일)</td>
-			<td colspan="2" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:793px">Restaurant - Blackbird Makati :<br />
+			<td style="border-bottom:1px solid black; border-left:none; border-right:none; border-top:none; text-align:center; vertical-align:middle; white-space:nowrap">Restaurant (24일)</td>
+			<td colspan="2" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:793px"> Blackbird Makati :<br />
 			6752 1229 Makati Ave, Makati, 1229 Metro Manila</td>
 		</tr>
 		<tr>
 			<td style="border-bottom:none; border-left:1px solid black; border-right:1px solid black; border-top:none; height:46px; text-align:center; vertical-align:middle; white-space:nowrap">4</td>
-			<td style="border-bottom:none; border-left:none; border-right:none; border-top:none; text-align:center; vertical-align:middle; white-space:nowrap">Restaurent (26일)</td>
-			<td colspan="2" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:793px">Restaurant - East Ocean Palace :<br />
+			<td style="border-bottom:none; border-left:none; border-right:none; border-top:none; text-align:center; vertical-align:middle; white-space:nowrap">Restaurant (26일)</td>
+			<td colspan="2" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:793px"> East Ocean Palace :<br />
 			Lot 37 Block 5 Aseana Business Park, Para&ntilde;aque, Metro Manila&nbsp;</td>
 		</tr>
 		<tr>
