--- a/0725.html
+++ b/0725.html
@@ -231,7 +231,7 @@
 	<tbody>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; height:23px; vertical-align:middle; white-space:nowrap; width:162px">필리핀 입국 필요 서류 :&nbsp;</td>
-			<td colspan="2" style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:nowrap; width:753px">항공티켓(귀국 티켓), 원헬스패스 QR 코드, 백신증명서(영문) &nbsp&nbsp&nbsp  --> 4. 링크 참조</td>
+			<td colspan="2" style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:nowrap; width:753px">항공티켓(귀국 티켓), 원헬스패스 QR 코드, 백신증명서(영문) &nbsp&nbsp&nbsp     ---> 4. 참고자료 확인</td>
 		</tr>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:47px; vertical-align:middle; white-space:nowrap">개인 준비물 :</td>
@@ -244,7 +244,7 @@
 
 <p>&nbsp;</p>
 
-<strong> 4. 참조 링크 </strong> 
+<strong> 4. 참고자료 </strong> 
 <table cellspacing="0" style="border-collapse:collapse; width:704px">
 	<tbody>
 		<tr>
