--- a/0725.html
+++ b/0725.html
@@ -235,7 +235,7 @@
 		</tr>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:47px; vertical-align:middle; white-space:nowrap">개인 준비물 :</td>
-			<td colspan="2" style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:753px">&nbsp;투어용품 (썬글라스, 모자, 수영복(실내, 실외), 샌들, 썬크림&nbsp; 등)<br />
+			<td colspan="2" style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:753px">&nbsp; 접이식 우산, (썬글라스, 모자, 수영복(실내, 실외), 샌들, 썬크림&nbsp; 등)<br />
 			&nbsp;피로연 복장(드레스 또는 원피스)</td>
 		</tr>
 	</tbody>
