--- a/0725.html
+++ b/0725.html
@@ -230,12 +230,12 @@
 <table cellspacing="0" style="border-collapse:collapse; width:915px">
 	<tbody>
 		<tr>
-			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; height:23px; vertical-align:middle; white-space:nowrap; width:162px">필리핀 입국 필요 서류 :&nbsp;</td>
-			<td colspan="2" style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:nowrap; width:753px">항공티켓(귀국 티켓), 원헬스패스 QR 코드, 백신증명서(영문) &nbsp&nbsp&nbsp     ---> 4. 참고자료 확인</td>
+			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; height:23px; vertical-align:middle; white-space:nowrap; width:162px">필리핀 입국 필요 서류 &nbsp;</td>
+			<td colspan="2" style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:nowrap; width:753px">항공티켓(귀국 티켓), 원헬스패스 QR 코드, 백신증명서(영문) &nbsp&nbsp&nbsp     ---> 4. 참고 사이트 확인</td>
 		</tr>
 		<tr>
-			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:47px; vertical-align:middle; white-space:nowrap">개인 준비물 :</td>
-			<td colspan="2" style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:753px">&nbsp; 접이식 우산, (썬글라스, 모자, 수영복(실내, 실외), 샌들, 썬크림&nbsp; 등)<br />
+			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:47px; vertical-align:middle; white-space:nowrap">개인 준비물 </td>
+			<td colspan="2" style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:753px">&nbsp;접이식 우산, (썬글라스, 모자, 수영복(실내, 실외), 샌들, 썬크림&nbsp; 등)<br />
 			&nbsp;피로연 복장(드레스 또는 원피스)</td>
 		</tr>
 	</tbody>
@@ -244,16 +244,16 @@
 
 <p>&nbsp;</p>
 
-<strong> 4. 참고자료 </strong> 
+<strong> 4. 참고 사이트 </strong> 
 <table cellspacing="0" style="border-collapse:collapse; width:704px">
 	<tbody>
 		<tr>
 			<td rowspan="2" style="border-bottom:.7px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; height:44px; text-align:center; vertical-align:middle; white-space:nowrap; width:63px">문서</td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; text-align:center; vertical-align:middle; white-space:nowrap; width:162px">필리핀 입국 안내 :</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; text-align:center; vertical-align:middle; white-space:nowrap; width:162px">필리핀 입국 안내 </td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; vertical-align:middle; white-space:nowrap; width:478px"><a href="https://www.itsmorefuninthephilippines.co.kr/travel/entry-guidelines">https://www.itsmorefuninthephilippines.co.kr/travel/entry-guidelines</a></td>
 		</tr>
 		<tr>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:22px; text-align:center; vertical-align:middle; white-space:nowrap">필리핀 여행 정보 :</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:22px; text-align:center; vertical-align:middle; white-space:nowrap">필리핀 여행 정보 </td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.itsmorefuninthephilippines.co.kr/travel-a-to-z">https://www.itsmorefuninthephilippines.co.kr/travel-a-to-z</a></td>
 		</tr>
 		<tr>
