--- a/20230725001.html
+++ b/20230725001.html
@@ -1,7 +1,7 @@
 
 <script  language="Javascript">
 <!-- Begin
-
+console.log(history.back());
     if ((history.back() != index.html) || (history.back() != 404.html))  {        
     	location.href= "index.html";
 	}
