--- a/20230725001.html
+++ b/20230725001.html
@@ -1,7 +1,7 @@
 
 <script  language="Javascript">
 <!-- Begin
-console.log(history.back());
+    console.log(document.referrer)
     if ((history.back() != index.html) || (history.back() != 404.html))  {        
     	location.href= "index.html";
 	}
@@ -29,7 +29,7 @@ console.log(history.back());
 <table cellspacing="0" style="border-collapse:collapse; width:692px">
 	<tbody>
 		<tr>
-			<td colspan="2" style="border-bottom:none; border-left:none; border-right:none; border-top:none; height:27px; vertical-align:middle; white-space:nowrap; width:138px"><strong>-하객 명단. </strong></td>
+			<td colspan="2" style="border-bottom:none; border-left:none; border-right:none; border-top:none; height:27px; vertical-align:middle; white-space:nowrap; width:138px"><strong> .하객 명단. </strong></td>
 			<td style="border-bottom:none; border-left:none; border-right:none; border-top:none; vertical-align:middle; white-space:nowrap; width:194px">&nbsp;</td>
 			<td style="border-bottom:none; border-left:none; border-right:none; border-top:none; vertical-align:middle; white-space:nowrap; width:82px">&nbsp;</td>
 			<td style="border-bottom:none; border-left:none; border-right:none; border-top:none; vertical-align:middle; white-space:nowrap; width:82px">&nbsp;</td>
