--- a/20230725001.html
+++ b/20230725001.html
@@ -1,10 +1,11 @@
 
 <script  language="Javascript">
 <!-- Begin
-//    console.log(document.referrer)
+p_url  = document.referrer;
+    console("이전 url : " + p_url)
+
 //    if ((history.back() != index.html) || (history.back() != 404.html))  {        
-//    	location.href= "index.html";
-		location.href= "https://igohomenow.github.io/manila/"
+//		location.href= "https://igohomenow.github.io/manila/"
 //	}
 	
 //-->
@@ -30,7 +31,7 @@
 <table cellspacing="0" style="border-collapse:collapse; width:692px">
 	<tbody>
 		<tr>
-			<td colspan="2" style="border-bottom:none; border-left:none; border-right:none; border-top:none; height:27px; vertical-align:middle; white-space:nowrap; width:138px"><strong> - 하객 명단. </strong></td>
+			<td colspan="2" style="border-bottom:none; border-left:none; border-right:none; border-top:none; height:27px; vertical-align:middle; white-space:nowrap; width:138px"><strong> . 하객 명단. </strong></td>
 			<td style="border-bottom:none; border-left:none; border-right:none; border-top:none; vertical-align:middle; white-space:nowrap; width:194px">&nbsp;</td>
 			<td style="border-bottom:none; border-left:none; border-right:none; border-top:none; vertical-align:middle; white-space:nowrap; width:82px">&nbsp;</td>
 			<td style="border-bottom:none; border-left:none; border-right:none; border-top:none; vertical-align:middle; white-space:nowrap; width:82px">&nbsp;</td>
