--- a/20230725001.html
+++ b/20230725001.html
@@ -1,8 +1,8 @@
 
 <script  language="Javascript">
 <!-- Begin
-p_url  = document.referrer;
-    console("이전 url : " + p_url)
+// p_url  = document.referrer;
+ //   console("이전 url : " + p_url)
 
 //    if ((history.back() != index.html) || (history.back() != 404.html))  {        
 //		location.href= "https://igohomenow.github.io/manila/"
