--- a/20230725001.html
+++ b/20230725001.html
@@ -5,6 +5,7 @@
     //console("이전 url : " + p_url)
 	//document.write("Test");
 	document.write(p_url);
+	alert(p_url);
 
 //    if ((history.back() != index.html) || (history.back() != 404.html))  {        
 //		location.href= "https://igohomenow.github.io/manila/"
@@ -33,7 +34,7 @@
 <table cellspacing="0" style="border-collapse:collapse; width:692px">
 	<tbody>
 		<tr>
-			<td colspan="2" style="border-bottom:none; border-left:none; border-right:none; border-top:none; height:27px; vertical-align:middle; white-space:nowrap; width:138px"><strong> ++ 하객 명단. </strong></td>
+			<td colspan="2" style="border-bottom:none; border-left:none; border-right:none; border-top:none; height:27px; vertical-align:middle; white-space:nowrap; width:138px"><strong> +++ 하객 명단. </strong></td>
 			<td style="border-bottom:none; border-left:none; border-right:none; border-top:none; vertical-align:middle; white-space:nowrap; width:194px">&nbsp;</td>
 			<td style="border-bottom:none; border-left:none; border-right:none; border-top:none; vertical-align:middle; white-space:nowrap; width:82px">&nbsp;</td>
 			<td style="border-bottom:none; border-left:none; border-right:none; border-top:none; vertical-align:middle; white-space:nowrap; width:82px">&nbsp;</td>
