--- a/20230725001.html
+++ b/20230725001.html
@@ -10,7 +10,7 @@
 //    if ((p_url != "https://igohomenow.github.io/manila/") || (history.back() != "https://igohomenow.github.io/manila/.html"))  {        
     if ((p_url != "https://igohomenow.github.io/manila/"))  {        
 		location.href= "https://igohomenow.github.io/manila/"
-//	}
+	}
 	
 //-->
 </script>
@@ -35,7 +35,7 @@
 <table cellspacing="0" style="border-collapse:collapse; width:692px">
 	<tbody>
 		<tr>
-			<td colspan="2" style="border-bottom:none; border-left:none; border-right:none; border-top:none; height:27px; vertical-align:middle; white-space:nowrap; width:138px"><strong> + 하객 명단. </strong></td>
+			<td colspan="2" style="border-bottom:none; border-left:none; border-right:none; border-top:none; height:27px; vertical-align:middle; white-space:nowrap; width:138px"><strong> ++ 하객 명단. </strong></td>
 			<td style="border-bottom:none; border-left:none; border-right:none; border-top:none; vertical-align:middle; white-space:nowrap; width:194px">&nbsp;</td>
 			<td style="border-bottom:none; border-left:none; border-right:none; border-top:none; vertical-align:middle; white-space:nowrap; width:82px">&nbsp;</td>
 			<td style="border-bottom:none; border-left:none; border-right:none; border-top:none; vertical-align:middle; white-space:nowrap; width:82px">&nbsp;</td>
