--- a/0725.html
+++ b/0725.html
@@ -1,4 +1,21 @@
 
+<script  language="Javascript">
+<!-- Begin
+ var p_url  = document.referrer;
+
+//  document.write("Test");
+//	alert(p_url);
+
+//    if ((p_url != "https://igohomenow.github.io/manila/") || (history.back() != "https://igohomenow.github.io/manila/.html"))  {        
+    if ((p_url != "https://igohomenow.github.io/manila/"))  {        
+		location.href= "https://igohomenow.github.io/manila/"
+	}
+	
+//-->
+</script>
+
+
+
 <!DOCTYPE html>
 <html lang="ko">
   <head>
