--- a/0725.html
+++ b/0725.html
@@ -284,7 +284,7 @@
 		</tr>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:57px; text-align:center; vertical-align:middle; white-space:normal; width:162px">One Health Pass<br />
-			(eArrival Card) 등록&nbsp;</td>
+			(eArrival Card/eTravel) 등록&nbsp;</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.youtube.com/watch?v=1MIUE-TdJiE">https://www.youtube.com/watch?v=1MIUE-TdJiE</a></td>
 		</tr>
 		<tr>
