--- a/Ref_Dresscode.html
+++ b/Ref_Dresscode.html
@@ -843,7 +843,7 @@ style='mso-bidi-font-size:10.0pt;line-height:115%;mso-ascii-font-family:"맑은 
 mso-fareast-font-family:"맑은 고딕";mso-bidi-font-family:"맑은 고딕";mso-font-kerning:
 0pt;mso-ansi-language:#0012'>2. </span><span style='mso-bidi-font-size:10.0pt;
 line-height:115%;mso-ascii-font-family:"맑은 고딕";mso-fareast-font-family:"맑은 고딕";
-mso-bidi-font-family:"맑은 고딕";mso-font-kerning:0pt;mso-ansi-language:KO'>셔츠+ 슬렉스</span><span
+mso-bidi-font-family:"맑은 고딕";mso-font-kerning:0pt;mso-ansi-language:KO'>셔츠+ 슬랙스</span><span
 lang=ko style='mso-bidi-font-size:10.0pt;line-height:115%;mso-ascii-font-family:
 "맑은 고딕";mso-fareast-font-family:"맑은 고딕";mso-bidi-font-family:"맑은 고딕";
 mso-font-kerning:0pt;mso-ansi-language:#0012'><o:p></o:p></span></p>
